feat: add Transformer stock selection model training and inference scripts
- Implemented training script for Transformer model in `train.ts` with CLI arguments for date range and model ID.
- Developed Transformer model architecture in `transformer.ts` using TensorFlow.js, including custom layers for positional encoding and multi-head self-attention.
- Configured TypeScript settings in `tsconfig.json` for strict type checking and module resolution.
- Created Svelte component `AiScreenerResults.svelte` for displaying AI scoring results with filtering options.
- Added API route `ai-screener.ts` for computing and retrieving AI scores, with database persistence for results.

--- a/.agents/skills/.instructions.md
+++ b/.agents/skills/.instructions.md
@@ -21,6 +21,8 @@ applyTo: "**"
 | 回測、績效、勝率、夏普、MDD、策略驗證 | `backtest_engine` | 歷史驗證 |
 | 資料品質、缺值、異常、健康檢查、DB 修復 | `data_quality` | 基礎設施 |
 | 警示、通知、SSE、推播、觸發 | `alert_notification` | 即時通知 |
+| Transformer、ML、深度學習、模型、預測 | `transformer_strategy` | ML 選股 |
+| 交易記憶、反思、L1/L2/L3、策略調整 | `transformer_strategy` | Trade Memory |
 
 ## 組合載入規則
 
@@ -33,6 +35,9 @@ applyTo: "**"
 - **「回測某策略」** → `backtest_engine` + 該策略對應的 Skill
 - **「資料有問題」** → `data_quality`
 - **「盤中通知」** → `alert_notification` + `day_trading_momentum`
+- **「ML 選股」** → `transformer_strategy` (+ `backtest_engine` 驗證)
+- **「模型訓練」** → `transformer_strategy`
+- **「策略反思」** → `transformer_strategy`
 
 ## 策略生命週期 (Pipeline Order)
 
@@ -49,12 +54,13 @@ Phase 6: risk_management → 部位計算 + 停損
 
 ## 資料庫架構速查
 
-所有模型共用 `stocks.db` (SQLite)，4 層 27 表，schema 定義於 `scripts/db/schema.sql`。
+所有模型共用 `stocks.db` (SQLite)，5 層 31 表，schema 定義於 `scripts/db/schema.sql`。
 
 - **原始層 (14 表)**：`stocks`, `price_history`, `chips`, `margin_short`, `shareholder_distribution`, `government_chips`, `major_broker_chips`, `director_holdings`, `security_lending`, `dealer_details`, `valuation_history`, `fundamentals`, `monthly_revenue`, `dividends`
 - **運算層 (5 表)**：`market_index`, `daily_indicators`, `chip_features`, `tech_features`, `valuation_features`
 - **聚合層 (3 表)**：`market_breadth_history`, `institutional_trend`, `sector_daily`
 - **快照層 (5 表)**：`latest_prices`, `institutional_snapshot`, `ai_reports`, `screener_scores`, `backtest_results`
+- **ML 記憶層 (4 表)**：`trade_journal`, `trade_patterns`, `strategy_adjustments`, `ml_models`
 
 ## 重要慣例
 
